tests/Semantic/test_2_r14.out
Error type 14 at Line 10: no such member: age
Error type 5 at Line 10: unmatching type on both sides of assignment
Error type 14 at Line 12: no such member: weight
Error type 5 at Line 12: unmatching type on both sides of assignment
