tests/Semantic/test_2_r14.spl
struct Girl
{
  int name;
  int height;
};
int test_2_r14()
{
  struct Girl gg;
  gg.name = 1;
  gg.age = 20;
  gg.height = 165;
  gg.weight = 95;
  return 0;
}
